--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
           <input
             type="text"
             id="productCodeInput"
+            required
             class="w-full rounded-xl border border-gray-200 bg-white px-4 py-2.5 text-sm text-gray-800 focus:border-blue-500 focus:ring-0 placeholder-gray-400 leading-6"
-            placeholder="e.g., HDFC_2W_COMP_123 (optional)"
+            placeholder="e.g., HDFC_2W_COMP_123"
           />
           <ul id="scenarioList" class="mt-4 space-y-2"></ul>
         </div>
