--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             name="proposal_overrides"
             rows="5"
             class="block w-full rounded-xl border border-gray-200 bg-white px-4 py-2.5 text-sm text-gray-800 focus:border-blue-500 focus:ring-0 placeholder-gray-400 leading-6 resize-y"
-            placeholder="e.g., Set manufacturing year to 2024, proposer first name to Anil"
+            placeholder="e.g., Set manufacturing year to 2024, proposer first name to George"
           ></textarea>
         </div>
         <div class="flex justify-center">
